# ph-engagement-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml  requirements.txt
.omc/state/: subagent-tracking.json
docs/: ARCHITECTURE.md
scripts/: install-daemon.sh  uninstall-daemon.sh
src/ph_engagement/: __init__.py  __main__.py  browser_actions.py  browser_driver.py  comment_generator.py  config.py  executor.py  scheduler.py  scraper.py  session_manager.py  storage.py  telegram_handler.py
